--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  align-items: center;
 }
 
 .logo {
@@ -9,11 +13,15 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  border-radius: 40px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 15px;
+  padding: 0;
 }
 
 a {
@@ -22,4 +30,5 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  border-radius: 70%;
 }
